# CFPQ_Solver

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml
flpq_solver/: __init__.py  __main__.py
flpq_solver/algorithms/: __init__.py  algorithms.py  matrix_algorithm.py
flpq_solver/grammars/: __init__.py  wcnf.py
flpq_solver/graphs/: __init__.py  graph_boolean_decomposition.py
tests/: test_all_pairs_reachability.py
