[tool.poetry]
name = "flpq-solver"
version = "0.1.0"
description = ""
authors = ["Vladimir Kutuev <vladimir.kutuev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-graphblas = "2024.2.0"
networkx = "^3.2.1"
pyformlang = "^1.0.9"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
